--- a/public/Contáctanos.html
+++ b/public/Contáctanos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/Contáctanos.html">
+    <link rel="shortcut icon" href="./image/Sombrero Vueltiao Azul.jpg" type="image/x-icon">
     <title>Artesanías Zenú - Tienda Virtual</title>
     <style>
         :root {
