--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <nav class="menu-categorias">
         <div class="categorias-container">
             <a href="#" class="categoria-link active">Inicio</a>
-            <a href="#" class="categoria-link">Canastos</a>
+            <a href="./canastos.html" class="categoria-link">Canastos</a>
             <a href="#" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
             <a href="./pulseras.html" class="categoria-link">Pulseras</a>
