--- a/public/canastos.html
+++ b/public/canastos.html
@@ -27,7 +27,7 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="#" class="categoria-link active">Inicio</a>
+            <a href="./index.html" class="categoria-link active">Inicio</a>
             <a href="#" class="categoria-link">Canastos</a>
             <a href="#" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
