--- a/public/centro_de_ayudas.html
+++ b/public/centro_de_ayudas.html
@@ -19,8 +19,11 @@
             <li><a href="#contacto">Contacto</a></li>
             <li><a href="#soporte-tecnico">Soporte Técnico</a></li>
             <li><a href="#tutoriales">Tutoriales</a></li>
+            <li> <a href="./index.html" class="categoria-link active">Inicio</a></li>
+         
         </ul>
     </nav>
+    
 
     <main>
         <section id="preguntas-frecuentes">
