--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="#" class="categoria-link active">Inicio</a>
+            <a href="" class="categoria-link active">Inicio</a>
             <a href="./canastos.html" class="categoria-link">Canastos</a>
             <a href="#" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
