--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -23,7 +23,7 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="#" class="categoria-link active">Inicio</a>
+            <a href="./artesanos.html" class="categoria-link active">Inicio</a>
             <a href="#" class="categoria-link">Canastos</a>
             <a href="#" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
@@ -100,8 +100,9 @@
                     <img src="./image/Nuestros artesanos.jpg">
                 </div>
                 <div class="card-body">
-                    <button>Ingresar</button>
+                    <a href="./artesanos.html">Ingresar</a>
                 </div>
+                 
           </div> 
         </div>
     </section>
