--- a/public/Contáctanos.html
+++ b/public/Contáctanos.html
@@ -471,8 +471,8 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="#" class="categoria-link active">Inicio</a>
-            <a href="#" class="categoria-link">Canastos</a>
+            <a href="./index.html" class="categoria-link active">Inicio</a>
+            <a href="./Contáctanos.html" class="categoria-link">Canastos</a>
             <a href="#" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
             <a href="#" class="categoria-link">Pulseras</a>
@@ -489,29 +489,8 @@
         </div>
         <div class="banner-img">🧺</div>
     </section>
-    <!-- BENEFICIOS -->
-    <section class="beneficios">
-        <div class="beneficio">
-            <span class="beneficio-icono">🛡️</span>
-            <span class="beneficio-texto">Compras seguras</span>
-        </div>
-        <div class="beneficio">
-            <span class="beneficio-icono">🏆</span>
-            <span class="beneficio-texto">Artesanía premiada</span>
-        </div>
-        <div class="beneficio">
-            <span class="beneficio-icono">💳</span>
-            <span class="beneficio-texto">Paga en línea o en efectivo</span>
-        </div>
-        <div class="beneficio">
-            <span class="beneficio-icono">🚚</span>
-            <span class="beneficio-texto">Envíos a todo el país</span>
-        </div>
-        <div class="beneficio">
-            <span class="beneficio-icono">🎁</span>
-            <span class="beneficio-texto">Promociones y descuentos</span>
-        </div>
-    </section>
+   
+    
     
     <div class="contacto">
         <h2>Contáctanos</h2>
@@ -540,10 +519,10 @@
     <footer>
         <div class="footer-links">
             <a href="contactenos.html">Contáctanos</a>
-            <a href="#">Centro de ayudas</a>
-            <a href="#">Política de privacidad</a>
+            <a href="./Contáctanos.html">Centro de ayudas</a>
+            <a href="./Contáctanos.html">Política de privacidad</a>
             <a href="#">Términos y condiciones</a>
-            <a href="#">Vende con nosotros</a>
+            <a href="./Contáctanos.html">Vende con nosotros</a>
         </div>
         <div class="footer-social">
             <a href="#" title="Instagram">&#x1F4F7;</a>
