--- a/public/canastos.html
+++ b/public/canastos.html
@@ -146,7 +146,7 @@
 
     <main>
         <div class="producto">
-            <img src="./Artesanias Zenú/assets/images/Panera zenu.jpg" alt="Panera">
+            <img src="./image/canastos 1.jpg" alt="Panera">
             <h2>Panera</h2>
             <p>Canasto tejido con caña flecha, una fibra natural utilizada por la cultura Zenú para elaborar sus artesanías.</p>
         </div>
@@ -198,9 +198,9 @@
     <!-- FOOTER -->
     <footer>
         <div class="footer-links">
-            <a href="contactenos.html">Contáctanos</a>
-            <a href="#">Centro de ayudas</a>
-            <a href="#">Política de privacidad</a>
+            <a href="./Contáctanos.html">Contáctanos</a>
+            <a href="./Contáctanos.html">Centro de ayudas</a>
+            <a href="./Contáctanos.html">Política de privacidad</a>
             <a href="#">Términos y condiciones</a>
             <a href="#">Vende con nosotros</a>
         </div>
