--- a/public/pulseras.html
+++ b/public/pulseras.html
@@ -22,7 +22,7 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="./artesanos.html" class="categoria-link active">Inicio</a>
+            <a href="#" class="categoria-link active">Inicio</a>
             <a href="#" class="categoria-link">Canastos</a>
             <a href="#" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
