--- a/public/canastos.html
+++ b/public/canastos.html
@@ -86,6 +86,7 @@
             padding: 2rem;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            width: 100%;
         }
         h1 {
             margin: 0;
