--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <div class="categorias-container">
             <a href="" class="categoria-link active">Inicio</a>
             <a href="./canastos.html" class="categoria-link">Canastos</a>
-            <a href="#" class="categoria-link">Mochilas</a>
+            <a href="./mochilas.html" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
             <a href="./pulseras.html" class="categoria-link">Pulseras</a>
             <a href="#" class="categoria-link">Decoración</a>
