--- a/public/mochilas.html
+++ b/public/mochilas.html
@@ -469,7 +469,7 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="./index.html" class="categoria-link active">Inicio</a>
+            <a href="#" class="categoria-link active">Inicio</a>
             <a href="#" class="categoria-link">Canastos</a>
             <a href="#" class="categoria-link">Mochilas</a>
             <a href="#" class="categoria-link">Sombreros</a>
@@ -583,7 +583,7 @@
 <body>
 
     <header>
-        <h1>Canastos Zenú</h1>
+        <h1>Mochilas</h1>
         <p>Artesanías únicas hechas a mano por comunidades indígenas Zenú</p>
     </header>
 
