--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <a href="#" class="categoria-link">Sombreros</a>
             <a href="./pulseras.html" class="categoria-link">Pulseras</a>
             <a href="#" class="categoria-link">Decoración</a>
-            <a href="#" class="categoria-link">Ofertas</a>
+            <a href="./ofertas.html" class="categoria-link">Ofertas</a>
             <a href="#" class="categoria-link">Más...</a>
         </div>
     </nav>
