--- a/public/pulseras.html
+++ b/public/pulseras.html
@@ -11,7 +11,6 @@
                 <button type="submit">🔍</button>
             </form>
             <div class="header-actions">
-                <button class="header-action" id="btn-notificaciones" title="Notificaciones">🔔</button>
                 <button class="header-action" id="btn-cuenta" title="Mi cuenta">👤</button>
                 <button class="header-action" id="btn-carrito" title="Carrito">
                     🛒<span class="badge" id="carrito-badge">0</span>
@@ -22,14 +21,12 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="#" class="categoria-link active">Inicio</a>
-            <a href="#" class="categoria-link">Canastos</a>
-            <a href="#" class="categoria-link">Mochilas</a>
-            <a href="#" class="categoria-link">Sombreros</a>
-            <a href="#" class="categoria-link">Pulseras</a>
-            <a href="#" class="categoria-link">Decoración</a>
-            <a href="#" class="categoria-link">Ofertas</a>
-            <a href="#" class="categoria-link">Más...</a>
+            <a href="./index.html" class="categoria-link active">Inicio</a>
+            <a href="./canastos.html" class="categoria-link">Canastos</a>
+            <a href="./mochilas.html" class="categoria-link">Mochilas</a>
+            <a href="./sombreros.html" class="categoria-link">Sombreros</a>
+            <a href="./pulseras.html" class="categoria-link">Pulseras</a>
+            <a href="./ofertas.html" class="categoria-link">Ofertas</a>
         </div>
     </nav>
     <!-- BANNER PRINCIPAL -->
@@ -151,7 +148,6 @@
             <a href="#">Centro de ayudas</a>
             <a href="#">Política de privacidad</a>
             <a href="#">Términos y condiciones</a>
-            <a href="#">Vende con nosotros</a>
         </div>
         <div class="footer-social">
             <a href="#" title="Instagram">&#x1F4F7;</a>
