--- a/public/ofertas.html
+++ b/public/ofertas.html
@@ -542,14 +542,12 @@
     <nav class="menu-categorias">
         <div class="categorias-container">
             <a href="./index.html" class="categoria-link active">Inicio</a>
-            <a href="#" class="categoria-link">Canastos</a>
-            <a href="#" class="categoria-link">Mochilas</a>
-            <a href="#" class="categoria-link">Sombreros</a>
-            <a href="#" class="categoria-link">Pulseras</a>
-            <a href="#" class="categoria-link">Decoración</a>
-            <a href="#" class="categoria-link">Ofertas</a>
-            <a href="#" class="categoria-link">Más...</a>
-        </div>
+            <a href="./canastos.html" class="categoria-link">Canastos</a>
+            <a href="./mochilas.html" class="categoria-link">Mochilas</a>
+            <a href="./sombreros.html" class="categoria-link">Sombreros</a>
+            <a href="./pulseras.html" class="categoria-link">Pulseras</a>
+            <a href="./ofertas.html" class="categoria-link">Ofertas</a>
+                </div>
     </nav>
     <!-- BANNER PRINCIPAL -->
     <section class="banner">
@@ -654,6 +652,7 @@
                 }
 
                 footer {
+                    width: 100%;
                     background-color: #c76227;
                     color: white;
                     text-align: center;
