--- a/public/Contáctanos.html
+++ b/public/Contáctanos.html
@@ -519,7 +519,7 @@
             <a href="contactenos.html">Contáctanos</a>
             <a href="./Contáctanos.html">Centro de ayudas</a>
             <a href="./Contáctanos.html">Política de privacidad</a>
-            <a href="#">Términos y condiciones</a>
+            <a href="./">Términos y condiciones</a>
         </div>
         <div class="footer-social">
             <a href="#" title="Instagram">&#x1F4F7;</a>
