--- a/public/ofertas.html
+++ b/public/ofertas.html
@@ -672,7 +672,7 @@
 
             <main>
                 <div class="producto">
-                    <img src="./image/sombrero vueltiao unisex.jpg" alt="Sombrero Unisex">
+                    <img src="./image/sombrero vueltiao unisex (1).jpg" alt="Sombrero Unisex">
                     <h2>Sombrero Unisex</h2>
                     <p>Este sombrero tradicional de la cultura Zenú, tejido con 17 pares (indicador de calidad del
                         trenzado), tiene una copa de 58 cm y un ala de 11 cm. Hecho a mano con fibras naturales de caña
@@ -680,14 +680,14 @@
                 </div>
 
                 <div class="producto">
-                    <img src="./image/pulsera caña flecha.jpg" alt="Pulsera Blanco y Negro">
+                    <img src="./image/pulera caña flecha (1).jpg" alt="Pulsera Blanco y Negro">
                     <h2>Pulsera Blanco y Negro</h2>
                     <p>Pulsera Zenú elaboradas en caña flecha de base color negro y los diseños tradicionales de esta
                         etnia. ¡Un accesorio único que evoca la tejeduría del tradicional sombrero vueltiao!</p>
                 </div>
 
                 <div class="producto">
-                    <img src="./image/sombrero vueltiao rosa.jpg" alt="Sombrero Rosa">
+                    <img src="./image/sombrero rosa (2).webp" alt="Sombrero Rosa">
                     <h2>Sombrero Rosa</h2>
                     <p>Sombrero tradicional del pueblo Zenú, tejido con 17 pares de caña flecha natural. Edición
                         especial en colores rosa, negro y natural. Flexible, resistente y liviano — se puede doblar sin
@@ -695,7 +695,7 @@
                 </div>
 
                 <div class="producto">
-                    <img src="./image/MOCHILA-CANASTO.webp" alt="mochila tricolor">
+                    <img src="./image/MOCHILA-CANASTO (1).webp" alt="mochila tricolor">
                     <h2>Mochila Tricolor</h2>
                     <p>Mochila tipo canasto tejida a mano con fibras naturales. Diseño tricolor (terracota, negro y
                         café) con cierre ajustable y doble correa: cadena metálica y tira tejida. Práctica, liviana y
@@ -703,7 +703,7 @@
                 </div>
 
                 <div class="producto">
-                    <img src="./image/mochila artesanal.webp" alt="Mochila artesanal">
+                    <img src="./image/mochila artesanal (1).webp" alt="Mochila artesanal">
                     <h2>Mochila Artesanal</h2>
                     <p>Destaca con esta mochila artesanal Zenú en vibrante color naranja, elaborada con fibra natural de
                         caña flecha. Su diseño único incluye asas decoradas con un patrón multicolor que resalta la
@@ -711,7 +711,7 @@
                 </div>
 
                 <div class="producto">
-                    <img src="./image/brazalete.jpg" alt="brazalete blanco y negro">
+                    <img src="./image/brazalete (1).jpg" alt="brazalete blanco y negro">
                     <h2>Brazalete Blanco y Negro</h2>
                     <p>Este elegante brazalete artesanal está elaborado con fibras naturales de caña flecha, tejido a
                         mano por artesanos del pueblo Zenú. Su diseño geométrico en blanco y negro resalta la riqueza
@@ -740,7 +740,6 @@
                 <a href="#">Centro de ayudas</a>
                 <a href="#">Política de privacidad</a>
                 <a href="#">Términos y condiciones</a>
-                <a href="#">Vende con nosotros</a>
             </div>
             <div class="footer-social">
                 <a href="#" title="Instagram">&#x1F4F7;</a>
