--- a/public/canastos.html
+++ b/public/canastos.html
@@ -469,12 +469,12 @@
     <!-- MENÚ DE CATEGORÍAS -->
     <nav class="menu-categorias">
         <div class="categorias-container">
-            <a href="#" class="categoria-link active">Inicio</a>
-            <a href="#" class="categoria-link">Canastos</a>
-            <a href="#" class="categoria-link">Mochilas</a>
-            <a href="#" class="categoria-link">Sombreros</a>
-            <a href="#" class="categoria-link">Pulseras</a>
-            <a href="#" class="categoria-link">Ofertas</a>
+            <a href="./index.html" class="categoria-link active">Inicio</a>
+            <a href="./canastos.html" class="categoria-link">Canastos</a>
+            <a href="./mochilas.html" class="categoria-link">Mochilas</a>
+            <a href="./sombreros.html" class="categoria-link">Sombreros</a>
+            <a href="./pulseras.html" class="categoria-link">Pulseras</a>
+            <a href="./ofertas.html" class="categoria-link">Ofertas</a>
         </div>
     </nav>
     <!-- BANNER PRINCIPAL -->
