--- a/public/Contáctanos.html
+++ b/public/Contáctanos.html
@@ -473,10 +473,10 @@
         <div class="categorias-container">
             <a href="./index.html" class="categoria-link active">Inicio</a>
             <a href="./Contáctanos.html" class="categoria-link">Canastos</a>
-            <a href="#" class="categoria-link">Mochilas</a>
-            <a href="#" class="categoria-link">Sombreros</a>
-            <a href="#" class="categoria-link">Pulseras</a>
-            <a href="#" class="categoria-link">Ofertas</a>
+            <a href="./mochilas.html" class="categoria-link">Mochilas</a>
+            <a href="./sombreros.html" class="categoria-link">Sombreros</a>
+            <a href="./pulseras.html" class="categoria-link">Pulseras</a>
+            <a href="./ofertas.html" class="categoria-link">Ofertas</a>
         </div>
     </nav>
     <!-- BANNER PRINCIPAL -->
