--- a/public/canastos.html
+++ b/public/canastos.html
@@ -568,14 +568,15 @@
             color: #555;
             line-height: 1.5;
         }
-        footer {
-            background-color: #c76227;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-            font-size: 0.9rem;
-        }
+       footer {
+                    width: 100%;
+                    background-color: #c76227;
+                    color: white;
+                    text-align: center;
+                    padding: 1rem;
+                    margin-top: 2rem;
+                    font-size: 0.9rem;
+                }
     </style>
 </head>
 <body>
@@ -649,7 +650,7 @@
             <a href="#" title="Facebook">&#x1F426;</a>
             <a href="#" title="WhatsApp">&#x1F4F2;</a>
         </div>
-        &copy; 2024 Artesanías Zenú. Todos los derechos reservados.
+       
     </footer>
     <script>
     // MODAL LOGIN/REGISTRO/OLVIDO
